Busy reimplenting select from targets and rewrite alias handling
Work in progress
Decouple Table and Column from aliases (definition vs runtime)
Delete obsolete Aliased class; implement alias as a wrapper instead of a a base
Extend API support to creation/referencing of aliases (still needs cleanup)
Deprecate ColumnValueGenerator; integrate and clean up expressions
Select can now target subqueries in its from clause
Started adding examples to web site